--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@zxing/library": "^0.20.0",
     "capacitor-barcode-scanner": "^2.1.1",
+    "cordova-plugin-geolocation": "^5.0.0",
+    "ionic-native": "^2.9.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
